# dragonmark

./: README.md  index.html  package-lock.json  package.json
dragonmark/: Cargo.toml  Trunk.toml  index.html
dragonmark/src/: app.rs
dragonmark/src-tauri/: Cargo.toml  Notes.md  tauri.conf.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/races/: dragonborn.rs  mod.rs
src/lib/: CharacterName.svelte  CreateCharacter.svelte  CreationNavbar.svelte  Form.svelte  MainPage.svelte  Navbar.svelte  Races.svelte
src/lib/characterCreation/: Dropdown.svelte  Name.svelte  Race.svelte
src/lib/characterCreation/races/: Dragonborn.svelte  Dwarf.svelte  Elf.svelte  Gnome.svelte  RaceDesc.svelte  subtypeStyles.css
src/lib/create/: Name.svelte
src/lib/create/race/: Dragonborn.svelte  Dropdown.svelte  Main.svelte  Overlay.svelte
src/lib/creation/: Race.svelte
src/lib/creation/races/: Dragonborn.svelte  Elf.svelte
src/lib/races/: Dragonborn.svelte  Dwarf.svelte  Overlay.svelte  RaceMain.svelte
src/lib/types/: CharacterInfo.d.ts  CreateCharNavbar.d.ts  Dragonborn.d.ts  NavbarPage.d.ts  Races.d.ts  Source.d.ts  SourceType.d.ts  SwitchPages.d.ts
src/lib_legacy/: CharacterName.svelte  CreateCharacter.svelte  CreationNavbar.svelte  LoadCharacter.svelte  MainPage.svelte
src/lib_legacy/races/: Dragonborn.svelte
src/old/: MainPage.svelte
src/old/create/: Main.svelte  Name.svelte  Navbar.svelte
