[package]
name = "dragonmark-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
styled = "0.2.0"
stylist = "0.13.0"

[workspace]
members = ["src-tauri"]
